Add home page header footer template move calculator page

--- a/game.html
+++ b/game.html
@@ -13,6 +13,11 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   <title>Physics Code - Game</title>
+  <meta property="og:url" content="https://pauld0051.github.io/physics-code/index.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Physics Code" />
+  <meta property="og:description" content="A free web resource for Physics students." />
+  <meta property="og:image" content="https://pauld0051.github.io/physics-code/assets/images/logo-main.png" />
 </head>
 
 <body>
@@ -30,6 +35,9 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="calculator.html">Calculator</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="help.html">Help</a>
