--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
             <a class="nav-link nav-text" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link nav-text" href="calculator.html">Calculator</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link nav-text" href="help.html">Help</a>
           </li>
           <li class="nav-item">
