--- a/help.html
+++ b/help.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="calculator.html">Calculator</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
           </li>
