--- a/test_yourself.html
+++ b/test_yourself.html
@@ -29,16 +29,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link nav-text" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
+            <a class="nav-link nav-text" href="calculator.html">Calculator</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-text" href="help.html">Help</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
+            <a class="nav-link nav-text" href="test_yourself.html">Test yourself <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="contact.html">Contact</a>
