Add meta og tags to each sharable page

--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,11 @@
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   <title>Physics Code - Calculator</title>
+  <meta property="og:url" content="https://pauld0051.github.io/physics-code/index.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Physics Code" />
+  <meta property="og:description" content="A free web resource for Physics students." />
+  <meta property="og:image" content="https://pauld0051.github.io/physics-code/assets/images/logo-main.png" />
   </head>
 
 <body>
