Fix spelling of coefficient in all pages

--- a/calculator.html
+++ b/calculator.html
@@ -153,7 +153,7 @@
       <div class="row">
         <div class="col-12 title-div">
           <div class="container heading-background heading-padding heading-margin">
-            <h2>Reaction Distance, coeffecient of friction and intersection distance</h2>
+            <h2>Reaction Distance, coefficient of friction and intersection distance</h2>
             <p class="card-text">
               Input the reaction time for the driver (s), the coefficient of friction (0 - 1) and the size of the intersection from stop line to opposite stop line. <a href="help.html" target="_blank" class="info-icon"> <i
                   class="fas fa-info-circle"></i></a>
