--- a/help.html
+++ b/help.html
@@ -296,13 +296,13 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Coeffecient of friction list</h5>
+        <h5 class="modal-title">coefficient of friction list</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-       Table 1: A list of common coeffecient of friction numbers
+       Table 1: A list of common coefficient of friction numbers
        <table class="table table-hover">
   <thead class="thead--blue">
     <tr>
