Fix double space and line breaks in test_yourself.js

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -66,7 +66,7 @@
           <p class="head-text">There are five maps to choose from in this test where you'll need to measure the intersection distance for a given
             scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button
             <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using
-            our <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
+            our <a href="calculator.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
             <p class="head-text">For help on the coefficient of friction click here: <button type="button" class="btn btn-link" data-toggle="modal" data-target="#frictionHelp"><i class="far fa-question-circle"></i></button></p>
           <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
           <div class="d-flex">
