--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <body>
   <header>
     <!-- Logo and text in Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-info no-gutters">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-info no-gutters">
       <a class="navbar-brand" href="index.html">
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
@@ -52,7 +52,7 @@
             <a class="nav-link nav-text" href="contact.html">Contact <span class="sr-only">(current)</span></a>
           </li>
         </ul>
-        <span class="navbar-text">
+        <span class="navbar-text rightside-navigation-text">
           Don't let physics control you - take control of physics!
         </span>
       </div>
